--- a/app/src/main/res/layout/local_party_item.xml
+++ b/app/src/main/res/layout/local_party_item.xml
@@ -22,12 +22,8 @@
                 android:id="@+id/LECHTitle"
                 android:layout_width="225dp"
                 android:layout_height="25dp"
-                android:ellipsize="marquee"
-                android:fontFamily="@font/inter"
-                android:lines="1"
+                style="@style/EventCardHeaderTitle"
                 android:text="This is placeholder info on a pool party"
-                android:textColor="@color/EventHeaderTitleText"
-                android:textFontWeight="1000"
                 android:textSize="19dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -36,15 +32,10 @@
                 android:id="@+id/LECHDistance"
                 android:layout_width="50dp"
                 android:layout_height="15dp"
+                style="@style/EventCardHeaderDistance"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
-                android:ellipsize="marquee"
-                android:fontFamily="@font/inter"
-                android:lines="1"
                 android:text="1.2 mi"
-                android:textAlignment="textEnd"
-                android:textColor="@color/EventHeaderDistanceText"
-                android:textFontWeight="1000"
                 android:textSize="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -53,10 +44,8 @@
                 android:id="@+id/LECHHostStatic"
                 android:layout_width="70dp"
                 android:layout_height="20dp"
-                android:fontFamily="@font/inter"
+                style="@style/EventCardHeaderHostStatic"
                 android:text="Hosted By: "
-                android:textColor="@color/HostsText"
-                android:textFontWeight="850"
                 android:textSize="12dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/LECHTitle" />
@@ -65,10 +54,8 @@
                 android:id="@+id/LECHHostNames"
                 android:layout_width="155dp"
                 android:layout_height="20dp"
-                android:fontFamily="@font/inter"
+                style="@style/EventCardHeaderHostNames"
                 android:text="\@Jogoat"
-                android:textColor="@color/HostsText"
-                android:textFontWeight="950"
                 android:textSize="12dp"
                 app:layout_constraintStart_toEndOf="@+id/LECHHostStatic"
                 app:layout_constraintTop_toBottomOf="@+id/LECHTitle" />
@@ -91,13 +78,9 @@
             android:id="@+id/LECIDescription"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/inter"
+            style="@style/EventCardInfoDescription"
             android:textSize="14dp"
-            android:lines="7"
-            android:textFontWeight="600"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-            android:textColor="@color/EventInfoText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -107,42 +90,32 @@
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginBottom="35dp"
-            android:fontFamily="@font/inter"
+            style="@style/EventCardInfoPhotoCount"
             android:text="2 PHOTO(S)"
-            android:textColor="@color/black"
-            android:textFontWeight="1000"
             android:textSize="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/InviteOthersButton"
+            android:id="@+id/LocalInviteButton"
             android:layout_width="150dp"
             android:layout_height="30dp"
-            android:text="INVITE OTHERS"
-            android:insetTop="0"
-            android:insetBottom="0"
-            android:minHeight="0dp"
-            android:fontFamily="@font/inter"
+            style="@style/EventCardActionButton"
             android:backgroundTint="@color/InviteOthersButton"
+            android:text="INVITE OTHERS"
             android:textSize="13dp"
-            android:textFontWeight="1000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/ImInButton"
+            android:id="@+id/LocalAcceptButton"
             android:layout_width="150dp"
             android:layout_height="30dp"
+            style="@style/EventCardActionButton"
             android:text="I'M IN"
-            android:insetTop="0"
-            android:insetBottom="0"
-            android:minHeight="0dp"
-            android:fontFamily="@font/inter"
             android:backgroundTint="@color/ImInButton"
             android:textSize="13dp"
-            android:textFontWeight="1000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
