--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="EventCardHeader" parent="@style/Widget.MaterialComponents.CardView">
         <item name="shapeAppearanceOverlay">@style/RoundedTopCornersOnly</item>
         <item name ="android:backgroundTint">@color/EventHeaderCard</item>
@@ -22,4 +22,59 @@
         <item name="cornerSizeBottomRight">25dp</item>
         <item name="cornerSizeBottomLeft">25dp</item>
     </style>
+
+    <style name="EventCardHeaderTitle" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:fontFamily">"@font/inter"</item>
+        <item name="android:lines">1</item>
+        <item name="android:textColor">@color/EventHeaderTitleText</item>
+        <item name="android:textFontWeight" tools:targetApi="p">1000</item>
+    </style>
+
+    <style name="EventCardHeaderDistance" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:fontFamily">"@font/inter"</item>
+        <item name="android:lines">1</item>
+        <item name="android:textColor">@color/EventHeaderDistanceText</item>
+        <item name="android:textAlignment">textEnd</item>
+        <item name="android:textFontWeight" tools:targetApi="p">1000</item>
+    </style>
+
+    <style name="EventCardHeaderHostStatic" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:fontFamily">"@font/inter"</item>
+        <item name="android:textColor">@color/HostsText</item>
+        <item name="android:textFontWeight" tools:targetApi="p">850</item>
+    </style>
+
+    <style name="EventCardHeaderHostNames" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:fontFamily">"@font/inter"</item>
+        <item name="android:lines">1</item>
+        <item name="android:textColor">@color/HostsText</item>
+        <item name="android:textFontWeight" tools:targetApi="p">950</item>
+    </style>
+
+    <style name="EventCardInfoDescription" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:ellipsize">end</item>
+        <item name="android:fontFamily">"@font/inter"</item>
+        <item name="android:lines">7</item>
+        <item name="android:textColor">@color/EventInfoText</item>
+        <item name="android:textFontWeight" tools:targetApi="p">600</item>
+    </style>
+
+    <style name="EventCardInfoPhotoCount" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:fontFamily">"@font/inter"</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textFontWeight" tools:targetApi="p">1000</item>
+    </style>
+
+    <style name="EventCardActionButton" parent="@style/Widget.Material3.Button">
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:fontFamily">"@font/inter"</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textFontWeight" tools:targetApi="p">1000</item>
+    </style>
+
 </resources>
