--- a/app/src/main/res/layout/fragment_locals.xml
+++ b/app/src/main/res/layout/fragment_locals.xml
@@ -6,9 +6,10 @@
     tools:context=".LocalsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="locals fragment" />
 
+
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </FrameLayout>
