--- a/app/src/main/res/layout/local_party_item2.xml
+++ b/app/src/main/res/layout/local_party_item2.xml
@@ -1,6 +1,86 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
+    android:cardCornerRadius="20dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <!-- First Line: Event Name and Host -->
+        <TextView
+            android:id="@+id/text_event_name_host"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="The Event Name"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+
+        <!-- Second Line: Start Time to End Time -->
+        <TextView
+            android:id="@+id/text_event_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start Time to End Time"
+            android:textSize="16sp"/>
+
+        <!-- Third Line: Address and Distance -->
+        <TextView
+            android:id="@+id/text_event_address_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Address | Distance miles"
+            android:textSize="16sp"/>
+
+        <!-- Fourth Line: List of Images -->
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/layout_user_images"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <!-- Placeholder for user images -->
+                <!-- Add ImageView for each user image here -->
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <!-- Top Right Quarter: Day of Week and Day of Month -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!-- Spacer View to Push Views to Right -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <!-- TextView for Day of Week and Day of Month -->
+            <TextView
+                android:id="@+id/text_day_of_week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mon"
+                android:textSize="28sp"
+                android:layout_marginEnd="8dp"/>
+
+            <TextView
+                android:id="@+id/text_day_of_month"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textSize="28sp"/>
+        </LinearLayout>
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
