--- a/app/src/main/res/layout/local_party_item2.xml
+++ b/app/src/main/res/layout/local_party_item2.xml
@@ -2,7 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp">
+    android:layout_margin="3dp"
+    app:cardCornerRadius="16dp"
+    app:cardUseCompatPadding="true"
+    android:elevation="8dp">
 
 
     <LinearLayout
