--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,84 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="223.69"
+    android:viewportHeight="252.35">
+  <group android:scaleX="0.48753518"
+      android:scaleY="0.55"
+      android:translateX="57.316628"
+      android:translateY="56.77875">>
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M222.81,57.62c3.29,6.66 -1.43,15.06 -34.62,29.06 -36.37,15.34 -67.27,34.04 -67.27,34.04 0,0 24.56,-29.79 56.2,-51.32s43.19,-16.84 45.69,-11.79Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M221.74,129.38c-0.57,5.66 -7.04,9.19 -34.24,4.79 -29.81,-4.81 -57.43,-5.23 -57.43,-5.23 0,0 28.01,-9.35 57.26,-10.47 30.12,-1.15 34.84,6.6 34.4,10.9Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M212.44,201.41c-4.44,5.23 -13.29,4.31 -37.32,-18.68 -26.33,-25.2 -53.51,-44.52 -53.51,-44.52 0,0 34.25,9.89 64.09,28.81 30.72,19.48 30.11,30.42 26.74,34.39Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M98.62,0.12c-6.27,1.28 -9.5,8.93 -1.5,38.92 8.76,32.87 12.32,72.48 12.32,72.48 0,0 7.34,-41.15 5.29,-74.07C112.61,3.56 103.38,-0.85 98.62,0.12Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M0.52,72.73c-2.42,6.37 2.62,13.62 34.14,23.48 34.53,10.81 64.37,25.16 64.37,25.16 0,0 -25.02,-25.03 -55.79,-41.9C11.58,62.11 2.36,67.9 0.52,72.73Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M17.43,212.12c5.15,4.46 13.69,2.22 33.79,-23.99 22.02,-28.71 45.76,-51.79 45.76,-51.79 0,0 -32.1,14.89 -58.52,37.98 -27.2,23.77 -24.93,34.41 -21.02,37.8Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M3.99,146.86c1.44,4.89 12.58,4.15 35.82,-4.23 25.46,-9.18 49.73,-14.12 49.73,-14.12 0,0 -26.23,-3.59 -52.19,0.27 -26.73,3.98 -34.46,14.37 -33.36,18.08Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M119.2,252.25c6.3,-1.16 9.66,-8.75 2.21,-38.89 -8.17,-33.02 -11.01,-72.69 -11.01,-72.69 0,0 -8.08,41.01 -6.63,73.96 1.5,33.92 10.64,38.5 15.43,37.62Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M40.73,35.8c-3.28,3.53 5.54,13.59 20.52,26.84 16.41,14.52 34.59,39.35 34.59,39.35 0,0 -12.87,-29.54 -25.7,-46.48 -13.21,-17.44 -26.45,-22.89 -29.41,-19.71Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M171.12,31.18c4.36,3.72 -4.7,16.84 -20.61,34.56 -17.43,19.42 -31.46,43.74 -31.46,43.74 0,0 7.12,-29.16 19.98,-50.95 13.24,-22.44 28.17,-30.7 32.1,-27.35Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M160.25,225.06c-4.73,1.88 -10.88,-7.67 -18.18,-27.5 -8,-21.73 -19.45,-46.14 -19.45,-46.14 0,0 18.11,21 29.87,40.13 12.1,19.69 12.02,31.83 7.76,33.52Z"
+          android:strokeWidth="0" />
+        
+      <path
+          android:fillColor="#FFFFFF"
+          android:fillType="nonZero"
+          android:pathData="M69.13,216.28c4.72,1.62 10.4,-10.76 16.44,-30.23 6.62,-21.32 16.19,-43.26 16.19,-43.26 0,0 -16.27,18.91 -26.7,37.87 -10.74,19.52 -10.19,34.16 -5.93,35.62Z"
+          android:strokeWidth="0" />
+      
+  </group>
 </vector>
