Minimum Viable User Profile

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,6 @@
     <style name="Base.Theme.PartyApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowActivityTransitions">true</item>
     </style>
-
-    <style name="Theme.PartyApp" parent="Base.Theme.PartyApp" />
 </resources>
