Add Local Establishment Button added to the MyEvents Page that allows users to add their establishment. Very similar setup to the AddPartyActivity. Adds Establishments to the Firebase Realtime group "Establishments" Adds Establishment photos to the Firebase Storage group "Establishments"

--- a/app/src/main/res/layout/activity_add_party.xml
+++ b/app/src/main/res/layout/activity_add_party.xml
@@ -196,7 +196,7 @@
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:listitem="@layout/party_image_item"/>
+                tools:listitem="@layout/rv_listing_image_item"/>
 
             <Button
                 android:id="@+id/PartySubmitButton"
