Tagging System. -Creates Tags and Tags recyclerview to be added to events in multiple cases. -Allows user to add tags in the AddEstablishment Activity and AddEvent Activity. -Uploads to TaggedEvents and TaggedEstablishments -Creates list of lowercase "sanitized" (only alphanumerics & whitespace) tags for search.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,13 @@
         <item name="cornerSizeBottomRight">0dp</item>
         <item name="cornerSizeBottomLeft">0dp</item>
     </style>
+    <style name="Rounded" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">25dp</item>
+        <item name="cornerSizeTopLeft">25dp</item>
+        <item name="cornerSizeBottomRight">25dp</item>
+        <item name="cornerSizeBottomLeft">25dp</item>
+    </style>
     <style name="EventCardInfo" parent="@style/Widget.MaterialComponents.CardView">
         <item name="shapeAppearanceOverlay">@style/RoundedBottomCornersOnly</item>
         <item name ="android:backgroundTint">@color/EventInfoCard</item>
