--- a/app/src/main/res/layout/activity_add_establishment.xml
+++ b/app/src/main/res/layout/activity_add_establishment.xml
@@ -133,14 +133,66 @@
 
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/photosRecyclerView"
-          android:layout_width="400dp"
+          android:layout_width="375dp"
           android:layout_height="260dp"
           app:layout_constraintTop_toBottomOf="@id/PhotosStatic"
-          android:layout_marginTop="20dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
+          android:layout_marginTop="20dp"
+          android:background="@drawable/rounded_text_entry"
+          android:backgroundTint="#232323"
           tools:listitem="@layout/rv_listing_image_item"/>
+      <TextView
+          android:id="@+id/EstTagsTextStatic"
+          android:layout_width="65dp"
+          android:layout_height="30dp"
+          android:fontFamily="@font/inter"
+          android:text="Tags:"
+          android:textColor="@color/white"
+          android:textFontWeight="1000"
+          android:textSize="22dp"
+          app:layout_constraintStart_toStartOf="@id/estTagsRecyclerView"
+          app:layout_constraintTop_toBottomOf="@id/photosRecyclerView"
+          android:layout_marginTop="15dp"/>
 
+      <EditText
+          android:id="@+id/EstTagEntry"
+          android:layout_width="200dp"
+          android:layout_height="30dp"
+          android:singleLine="true"
+          android:text="THIS IS A TEST"
+          android:paddingHorizontal="10dp"
+          android:background="@drawable/rounded_text_entry"
+          android:textColor="@color/white"
+          android:textSize="20dp"
+          android:layout_marginTop="15dp"
+          android:layout_marginStart="5dp"
+          app:layout_constraintStart_toEndOf="@id/EstTagsTextStatic"
+          app:layout_constraintTop_toBottomOf="@id/photosRecyclerView" />
+
+      <Button
+          android:id="@+id/EstAddTagButton"
+          style="@style/EventCardActionButton"
+          android:layout_width="90dp"
+          android:layout_height="30dp"
+          android:layout_marginTop="15dp"
+          android:backgroundTint="@color/EditEventButton"
+          android:text="ADD"
+          android:textSize="14dp"
+          app:layout_constraintEnd_toEndOf="@+id/estTagsRecyclerView"
+          app:layout_constraintTop_toBottomOf="@id/photosRecyclerView" />
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/estTagsRecyclerView"
+          android:layout_width="375dp"
+          android:layout_height="80dp"
+          app:layout_constraintTop_toBottomOf="@id/EstAddTagButton"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          android:layout_marginTop="10dp"
+          android:background="@drawable/rounded_text_entry"
+          android:backgroundTint="#232323"
+          tools:listitem="@layout/tag_item"/>
       <Button
           android:id="@+id/EstablishmentSubmitButton"
           style="@style/EventCardActionButton"
@@ -154,7 +206,7 @@
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/photosRecyclerView" />
+          app:layout_constraintTop_toBottomOf="@id/estTagsRecyclerView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>
   </androidx.constraintlayout.widget.ConstraintLayout>
