Large Changes to fix design issues and missing features. added GeoHelper class to better deal with location and address callings. removed LocalsItem.kt and LocalEstablishment.kt and migrated dependent methods back onto EventModel and EstablishmentModel for consistency in the code. Made slight changes to the AddPartyActivity and AddEstablishmentActivity to imporove maps. Beginning nearbyshops item and recyclers to match figma.

--- a/app/src/main/res/layout/mini_est_item.xml
+++ b/app/src/main/res/layout/mini_est_item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/mini_est_card"
         style="@style/RoundedCard"
         android:layout_width="180dp"
         android:layout_height="90dp"
