--- a/app/src/main/res/layout/locals_extra.xml
+++ b/app/src/main/res/layout/locals_extra.xml
@@ -36,7 +36,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/localEventInfoCard"
         android:layout_width="390dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/rounded_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,12 +84,14 @@
                 android:id="@+id/addressTextView"
                 android:layout_width="380dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:text="Event Address"
                 android:textSize="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/endTimeTextView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
     <com.google.android.material.card.MaterialCardView
@@ -128,11 +130,11 @@
         android:layout_marginTop="5dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="150dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/localEventTags"
-                android:layout_width="370dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Event Description"
                 android:textSize="16dp"
@@ -140,7 +142,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="10dp"/>
+                tools:listitem="@layout/tag_item"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
     <Button
@@ -189,7 +191,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nearbyStaticTextView"
-        tools:listitem="@layout/event_page_local_est_mini_item"/>
+        tools:listitem="@layout/mini_est_item"/>
 
     <TextView
         android:id="@+id/addressMapsStaticTextView"
@@ -225,14 +227,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:cardCornerRadius="15dp">
 
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:map="http://schemas.android.com/apk/res-auto"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:id="@+id/mapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"/>-->
         <View
-            android:id="@+id/mapOverlay"
+            android:id="@+id/localsExtraMapOverlay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
