Large Changes to fix design issues and missing features. added listing_small_image_item.xml to show shops under expanded local event activity and allow them to go to the expanded shop activity. Added optimization to Firebase calls. reorganized xml files for locals fragment, establishment extra, and event extra. Small changes to AddEstablishment and AddParty. Created and completed Tag filtering system. Users can enter and filter events based on tags. Would still like to implement tag coloring system.

--- a/app/src/main/res/layout/activity_add_establishment.xml
+++ b/app/src/main/res/layout/activity_add_establishment.xml
@@ -141,7 +141,7 @@
           android:layout_marginTop="20dp"
           android:background="@drawable/rounded_text_entry"
           android:backgroundTint="#232323"
-          tools:listitem="@layout/rv_listing_image_item"/>
+          tools:listitem="@layout/add_image_item"/>
       <TextView
           android:id="@+id/EstTagsTextStatic"
           android:layout_width="65dp"
