--- a/app/src/main/res/layout/fragment_locals.xml
+++ b/app/src/main/res/layout/fragment_locals.xml
@@ -1,92 +1,239 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/SearchAndFilterSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp">
         <EditText
             android:id="@+id/search_bar"
-            android:layout_width="0dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Search for Event"
             android:inputType="text"
             android:maxLines="1"
-            android:layout_marginEnd="8dp" />
-
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <ImageView
             android:id="@+id/image_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/common_google_signin_btn_icon_light"
             android:contentDescription="search button"
-            android:layout_marginStart="8dp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+            android:src="@drawable/common_google_signin_btn_icon_light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <TextView
             android:id="@+id/text_sort_distance"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="Sort by Distance"
             android:textStyle="bold"
-            android:gravity="start"/>
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_bar" />
 
         <TextView
             android:id="@+id/text_sort_attendees"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="Sort by Attendees"
-            android:gravity="end"/>
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_bar" />
+        <TextView
+            android:id="@+id/tag_list_static_text"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:background="@drawable/rounded_text_entry"
+            android:backgroundTint="@color/EditEventButton"
+            android:textColor="@color/white"
+            android:text="Tags:"
+            android:textSize="18dp"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_sort_distance" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tag_list_static_rv"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            app:layout_constraintStart_toEndOf="@id/tag_list_static_text"
+            app:layout_constraintTop_toBottomOf="@id/text_sort_distance"
+            tools:listitem="@layout/tag_item"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/text_local_establishments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Local Establishments"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_establishments"
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:scrollbars="horizontal"/>
+        android:layout_height="500dp"
+        app:layout_constraintTop_toBottomOf="@id/SearchAndFilterSection"
+        tools:layout_marginTop="20dp">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/text_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="16dp"
+                android:text="Local Events"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"  />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_locals"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/text_title"
+                tools:listitem="@layout/local_party_item"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="horizontal"/>
+
+
+            <TextView
+                android:id="@+id/text_local_establishments"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="16dp"
+                android:text="Local Establishments"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/recycler_locals" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_establishments"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:scrollbars="horizontal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/text_local_establishments"
+                tools:listitem="@layout/local_party_item"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="horizontal" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
     <TextView
-        android:id="@+id/text_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Local Events"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_locals"
+        android:id="@+id/tagCardMask"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"/>
+        android:layout_height="match_parent"
+        android:paddingHorizontal="300dp"
+        android:background="@drawable/tag_card_mask"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        />
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/tag_filter_card"
+        android:layout_width="300dp"
+        android:layout_height="350dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/tagFilterTagsTextStatic"
+                android:layout_width="125dp"
+                android:layout_height="30dp"
+                android:fontFamily="@font/inter"
+                android:text="Enter Tags:"
+                android:textColor="@color/black"
+                android:textFontWeight="1000"
+                android:textSize="22dp"
+                app:layout_constraintStart_toStartOf="@id/tagFilterTagsRecyclerView"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="25dp"/>
 
-</LinearLayout>
+            <ImageButton
+                android:id="@+id/filterCardBackButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/baseline_arrow_back_24"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/tagFilterTagEntry"
+                android:layout_width="175dp"
+                android:layout_height="30dp"
+                android:singleLine="true"
+                android:text="THIS IS A TEST"
+                android:paddingHorizontal="10dp"
+                android:background="@drawable/rounded_text_entry"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="@id/tagFilterTagsTextStatic"
+                app:layout_constraintTop_toBottomOf="@id/tagFilterTagsTextStatic" />
+
+            <Button
+                android:id="@+id/tagFilterAddTagButton"
+                style="@style/EventCardActionButton"
+                android:layout_width="95dp"
+                android:layout_height="30dp"
+                android:backgroundTint="@color/EditEventButton"
+                android:text="ADD"
+                android:textSize="14dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp"
+                app:layout_constraintStart_toEndOf="@id/tagFilterTagEntry"
+                app:layout_constraintTop_toBottomOf="@id/tagFilterTagsTextStatic"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/tagFilterTagsRecyclerView"
+                android:layout_width="275dp"
+                android:layout_height="140dp"
+                app:layout_constraintTop_toBottomOf="@id/tagFilterAddTagButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/rounded_text_entry"
+                android:backgroundTint="#232323"
+                tools:listitem="@layout/tag_item"/>
+
+            <Button
+                android:id="@+id/tagFilterSubmitButton"
+                style="@style/EventCardActionButton"
+                android:layout_width="275dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"
+                android:backgroundTint="@color/EditEventButton"
+                android:text="UPDATE TAGS"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
