--- a/app/src/main/res/layout/listing_small_image_item.xml
+++ b/app/src/main/res/layout/listing_small_image_item.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <ImageView
-        android:id="@+id/photo"
+        android:id="@+id/addedPhoto"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_margin="5dp"
@@ -15,15 +13,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/addPhotoIcon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        app:layout_constraintBottom_toBottomOf="@+id/photo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/photo"
-        app:srcCompat="@drawable/baseline_add_circle_outline_24" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
