--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,12 +30,7 @@
         <item name="cornerSizeBottomLeft">25dp</item>
     </style>
 
-    <style name="RoundedCard" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSizeTopRight">25dp</item>
-        <item name="cornerSizeTopLeft">25dp</item>
-        <item name="cornerSizeBottomRight">25dp</item>
-        <item name="cornerSizeBottomLeft">25dp</item>
+    <style name="BasicTextEntry" parent="">
     </style>
 
     <style name="EventCardHeaderTitle" parent="@style/Widget.AppCompat.TextView">
@@ -93,6 +88,17 @@
     </style>
 
     <style name="SlightRoundedCorners" parent="@style/Widget.Material3.Button">
+        <item name="cornerSizeTopRight">0dp</item>
+        <item name="cornerSizeTopLeft">12dp</item>
+        <item name="cornerSizeBottomRight">12dp</item>
+        <item name="cornerSizeBottomLeft">12dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:fontFamily">"@font/inter"</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textFontWeight" tools:targetApi="p">1000</item>
+    </style>
+    <style name="SlightRoundedCornersTV">
         <item name="cornerSizeTopRight">0dp</item>
         <item name="cornerSizeTopLeft">12dp</item>
         <item name="cornerSizeBottomRight">12dp</item>
